server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-23.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'342 Physik' should get '5101.EG.342' in 1 results"
---
- facet: rooms
  entries:
    - kind: location
      id: 5101.EG.342
      type: room
      name: "5101.EG.\u0019342\u0017 (\u0019Physik\u0017labor)"
      subtext: "garching, Physik I"
      subtext_bold: 2342@5101
    - kind: location
      id: 5101.01.342
      type: room
      name: "5101.01.\u0019342\u0017 (Sitzungs-,  Konferenzraum)"
      subtext: "garching, Physik I"
      subtext_bold: 3342@5101
    - kind: location
      id: 5109.03.042
      type: room
      name: 5109.03.042 (Teilküche)
      subtext: "garching, MAP"
      subtext_bold: 042@5109
    - kind: location
      id: 4213.01.342
      type: room
      name: "4213.01.\u0019342\u0017 (Labor)"
      subtext: "weihenstephan, Lebensmitteltechnikum"
      subtext_bold: O42@4213
    - kind: location
      id: 4213.EG.342
      type: room
      name: "4213.EG.\u0019342\u0017 (Labor)"
      subtext: "weihenstephan, Lebensmitteltechnikum"
      subtext_bold: E42@4213
    - kind: location
      id: 4317.03.342
      type: room
      name: "4317.03.\u0019342\u0017 (Labor (S2,  Bio2))"
      subtext: "weihenstephan, Tierwissenschaften"
      subtext_bold: 3.42@4317
    - kind: location
      id: 0503.EG.342
      type: room
      name: "0503.EG.\u0019342\u0017 (Sekretariat 2)"
      subtext: "stammgelände, Z3"
      subtext_bold: 0342@0503
    - kind: location
      id: 2910.03.342
      type: room
      name: "2910.03.\u0019342\u0017 (Teeküche)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.342@2910
    - kind: location
      id: 0503.01.342
      type: room
      name: "0503.01.\u0019342\u0017 (Büro)"
      subtext: "stammgelände, Z3"
      subtext_bold: 1342@0503
    - kind: location
      id: 0503.03.342
      type: room
      name: "0503.03.\u0019342\u0017 (Büro)"
      subtext: "stammgelände, Z3"
      subtext_bold: 3342@0503
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
