server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-24.snap
---
source: server/src/search_executor/mod.rs
description: "lecture hall, should be preferred over other rooms"
expression: actual
info: "'2503' should get '5101.EG.503' in 1 results # lecture hall, should be preferred over other rooms"
---
- facet: rooms
  entries:
    - kind: location
      id: 5101.EG.503
      type: room
      name: 5101.EG.503 (Physik Hörsaal 3)
      subtext: "garching, Physik I"
      subtext_bold: 2503@5101
      parsed_id: "PH \u00192503\u0017"
    - kind: location
      id: 0505.02.503
      type: room
      name: 0505.02.503 (Büro)
      subtext: "stammgelände, Z5"
      subtext_bold: 2503@0505
      parsed_id: "\u00192503\u0017 Z5"
    - kind: location
      id: 5505.02.503A
      type: room
      name: 5505.02.503A (Büro)
      subtext: "garching, MW"
      subtext_bold: 2503A@5505
      parsed_id: "MW \u00192503\u0017A"
    - kind: location
      id: 5505.02.503M
      type: room
      name: 5505.02.503M (WC-Vorraum Herren)
      subtext: "garching, MW"
      subtext_bold: 2503M@5505
      parsed_id: "MW \u00192503\u0017M"
    - kind: location
      id: 5505.02.503N
      type: room
      name: 5505.02.503N (WC-Vorraum Damen)
      subtext: "garching, MW"
      subtext_bold: 2503N@5505
      parsed_id: "MW \u00192503\u0017N"
    - kind: location
      id: 5505.02.503P
      type: room
      name: 5505.02.503P (WC-Herren)
      subtext: "garching, MW"
      subtext_bold: 2503P@5505
      parsed_id: "MW \u00192503\u0017P"
    - kind: location
      id: 5505.02.503Q
      type: room
      name: 5505.02.503Q (WC-Damen)
      subtext: "garching, MW"
      subtext_bold: 2503Q@5505
      parsed_id: "MW \u00192503\u0017Q"
    - kind: location
      id: 0105.02.503
      type: room
      name: 0105.02.503 (Chef.-Büro)
      subtext: "stammgelände, N5"
      subtext_bold: N2503@0105
    - kind: location
      id: 0305.02.503
      type: room
      name: 0305.02.503 (WC-Damen)
      subtext: "stammgelände, SO5"
      subtext_bold: S2503@0305
    - kind: location
      id: 1913.02.503
      type: room
      name: 1913.02.503 (WC-Unisex)
      subtext: "campus-heilbronn, HIP Turm, Edisonstr. 15"
      subtext_bold: A.02.503@1913
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
