server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-31.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'audimax' should get '0509.EG.980' in 1 results"
---
- facet: rooms
  entries:
    - id: 0509.EG.980
      type: room
      name: "0509.EG.980 (\u0019Audimax\u0017, Werner-von-Siemens-Hörsaal)"
      subtext: "stammgelände, Wienandsbau"
      subtext_bold: 0980@0509
    - id: 8120.01.101
      type: room
      name: "8120.01.101 (\u0019Audimax\u0017 im Galileo)"
      subtext: "garching, Galileo"
      subtext_bold: Audimax@8120
    - id: 0509.02.986
      type: room
      name: "0509.02.986 (\u0019Audimax\u0017 Galerie)"
      subtext: "stammgelände, Wienandsbau"
      subtext_bold: 1986@0509
    - id: 5620.01.101
      type: room
      name: "5620.01.101 (Hörsaal 1,  \"Interims I\")"
      subtext: "garching, Interims-Audimax"
      subtext_bold: 101@5620
    - id: 5620.01.102
      type: room
      name: "5620.01.102 (Hörsaal 2,  \"Interims I\")"
      subtext: "garching, Interims-Audimax"
      subtext_bold: 102@5620
    - id: 0509.EG.986
      type: room
      name: "0509.EG.986 (Spülküche \u0019Audimax\u0017)"
      subtext: "stammgelände, Wienandsbau"
      subtext_bold: 0986@0509
    - id: 5620.EG.003
      type: room
      name: 5620.EG.003 (WC-Damen)
      subtext: "garching, Interims-Audimax"
      subtext_bold: 003@5620
    - id: 5620.EG.004
      type: room
      name: 5620.EG.004 (WC-Herren)
      subtext: "garching, Interims-Audimax"
      subtext_bold: 004@5620
    - id: 5620.EG.005
      type: room
      name: 5620.EG.005 (Putzraum)
      subtext: "garching, Interims-Audimax"
      subtext_bold: 005@5620
    - id: 5620.EG.006
      type: room
      name: 5620.EG.006 (WC-Barrierefrei)
      subtext: "garching, Interims-Audimax"
      subtext_bold: 006@5620
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries:
    - id: "5620"
      type: building
      name: "Interims-\u0019Audimax\u0017"
      subtext: Gebäude
    - id: "0597"
      type: building
      name: "Vorplatz \u0019Audi-Max\u0017"
      subtext: Gebäude
  n_visible: 2
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
