server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-32.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'1229 seminarraum' should get '0502.01.229' in 1 results"
---
- facet: rooms
  entries:
    - kind: location
      id: 0502.01.229
      type: room
      name: "0502.01.229 (\u0019Seminarraum\u0017)"
      subtext: "stammgelände, Z2"
      subtext_bold: 1229@0502
      parsed_id: "\u00191229\u0017 Z2"
    - kind: location
      id: 5101.U1.229
      type: room
      name: 5101.U1.229 (Büro)
      subtext: "garching, Physik I"
      subtext_bold: 1229@5101
      parsed_id: "PH \u00191229\u0017"
    - kind: location
      id: 5502.01.229
      type: room
      name: 5502.01.229 (Büro)
      subtext: "garching, MW"
      subtext_bold: 1229@5502
      parsed_id: "MW \u00191229\u0017"
    - kind: location
      id: 0502.U1.229
      type: room
      name: 0502.U1.229 (Werkstatt)
      subtext: "stammgelände, Z2"
      subtext_bold: "-1229@0502"
    - kind: location
      id: 0102.U1.229
      type: room
      name: 0102.U1.229 (Stromversorgung)
      subtext: "stammgelände, N2"
      subtext_bold: N-1229@0102
    - kind: location
      id: 2604.01.229
      type: room
      name: 2604.01.229 (Chemielabor)
      subtext: "pasing-franz-langinger-straße, BL. L"
      subtext_bold: 229@2604
    - kind: location
      id: 2332.01.229
      type: room
      name: 2332.01.229 ((32.1.239) Büro)
      subtext: "sz, CiO/SG Institute Ost"
      subtext_bold: 01.2332.229@2332
    - kind: location
      id: 2334.01.224
      type: room
      name: 2334.01.224 ((34.1.229) Hilfskraft)
      subtext: "sz, CiO/SG Institute West, Bibliothek"
      subtext_bold: 01.2334.224@2334
    - kind: location
      id: 2601.01.229
      type: room
      name: 2601.01.229 (Arbeitsraum/mit Besp.Grp.)
      subtext: "pasing-franz-langinger-straße, BL. G"
      subtext_bold: G229@2601
    - kind: location
      id: 4308.01.229
      type: room
      name: 4308.01.229 (Büro)
      subtext: "weihenstephan, Humanbiologie Zoologie"
      subtext_bold: 2.29@4308
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
